[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/Spritres/spr_human_logger.png" type="Texture" id=1]
[ext_resource path="res://src/Actor/Logger/Logger.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
resource_name = "Cut"
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13, 14, 15, 16, 9, 10, 11, 12, 13, 14, 15, 16, 9, 10, 11, 12, 13, 14, 15, 16 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Cut_area/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=2]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 14 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Cut_area/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=3]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="CapsuleShape2D" id=4]
radius = 19.2635
height = 62.9168

[sub_resource type="CapsuleShape2D" id=5]
radius = 19.3362
height = 50.8186

[sub_resource type="CircleShape2D" id=6]
radius = 240.537

[node name="Logger" type="KinematicBody2D"]
position = Vector2( 606.129, 332.249 )
script = ExtResource( 2 )

[node name="Body" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Body"]
texture = ExtResource( 1 )
hframes = 5
vframes = 4
frame = 14

[node name="AnimationPlayer" type="AnimationPlayer" parent="Body"]
anims/Cut = SubResource( 1 )
anims/Idle = SubResource( 2 )
anims/Run = SubResource( 3 )

[node name="Cut_area" type="Area2D" parent="Body" groups=[
"Cut",
]]
position = Vector2( -34.4514, 2.35968 )
collision_layer = 64
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/Cut_area"]
position = Vector2( -8.9668, 0.471924 )
shape = SubResource( 4 )
disabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 5 )

[node name="Search_Radius" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="Search_Radius"]
position = Vector2( -0.629883, 0 )
shape = SubResource( 6 )
disabled = true

[node name="Idle_timer" type="Timer" parent="."]
autostart = true

[connection signal="animation_finished" from="Body/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="area_entered" from="Search_Radius" to="." method="_on_Search_Radius_area_entered"]
[connection signal="area_exited" from="Search_Radius" to="." method="_on_Search_Radius_area_exited"]
[connection signal="body_entered" from="Search_Radius" to="." method="_on_Detected_body_entered"]
[connection signal="body_exited" from="Search_Radius" to="." method="_on_Search_Radius_body_exited"]
[connection signal="timeout" from="Idle_timer" to="." method="_on_Idle_timer_timeout"]
